# poker

./: docker-compose.yml  package-lock.json  package.json  readme.md
Backend/: .gitignore  Database.py  Dockerfile  Model.py  Repository.py  calculate_hand.py  main.py  pyproject.toml
Backend/src/: main.py
Backend/src/api/: routes.py
Backend/src/core/: config.py
Backend/src/db/: database.py
Backend/src/models/: game.py
Backend/src/repositories/: base.py  game_repository.py
Backend/src/services/: game_service.py
Frontend/: Dockerfile  jest.config.js  package-lock.json  package.json  playwright.config.ts
Frontend/e2e/: poker.spec.ts
Frontend/src/api/: endpoints.ts  save-game.ts
Frontend/src/components/: ErrorModal.tsx  GameResult.tsx  SavedGames.tsx
Frontend/src/interfaces/: ActionSlice.ts  ComponentProps.ts  DeckState.ts  GameData.ts  GameSlice.ts  GameStory.ts  card.ts  player.ts
Frontend/src/pages/: Bet.tsx  CardComponent.tsx  FrontPage.tsx  GameWindow.tsx  LogsWindow.tsx  Raise.tsx  StartGame.tsx  index.tsx
Frontend/src/services/: gameService.ts
Frontend/src/stores/: appStore.ts  gamePlay.ts  logStore.tsx  storyStore.ts
Frontend/src/stores/__tests__/: gamePlay.test.ts
Frontend/src/styles/: globals.css
Frontend/src/types/: game.ts
src/interfaces/: game.ts
src/pages/: Bet.tsx  GameWindow.tsx  index.tsx
src/stores/: cardStore.ts  counterStrore.ts  gamePlay.ts
