[project]
name = "poker-backend"
version = "0.1.0"
description = "This is a backend for poker game, test project"
authors = [
    {name = "anatoli.derese",email = "anatoli.derese@aait.edu.et"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pokerkit (>=0.6.1,<0.7.0)",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
