[tool.poetry]
name = "poker-backend"
version = "0.1.0"
description = ""
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
asyncpg = "^0.29.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
pokerkit = "^0.6.1"

[tool.poetry.group.dev.dependencies]
# Development dependencies would go here
# For example:
# pytest = "^7.0.0"
# black = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 